--- a/global.css
+++ b/global.css
@@ -23,9 +23,41 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
+
+	::-webkit-scrollbar {
+		height: 10px;
+		width: 10px;
+	  }
+  ::-webkit-scrollbar-track {
+	border-radius: 5px;
+	background-color: #EDEDED;
+  }
+  
+  ::-webkit-scrollbar-track:hover {
+	background-color: #EDEDED;
+  }
+  
+  ::-webkit-scrollbar-track:active {
+	background-color: #EDEDED;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background-color: #BFBFBF;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+	background-color: #A0A0A0;
+  }
+  
+  ::-webkit-scrollbar-thumb:active {
+	background-color: #777777;
+  }
 }
+
 ol, ul {
 	list-style: none;
 }
@@ -51,8 +83,18 @@ a {
 
 :root {
 	--vermelho-bg: #c20008;
+	--vermelho-fonte: #ea000c;
 	--amarelo-fonte: #fed300;
 	--verde-whatsapp: #33a515;
+}
+
+/* CONTAINERS */
+
+.container-1200 {
+	max-width: 1200px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* FONTES */
@@ -60,3 +102,17 @@ a {
 .londrina-font {
 	font-family: "Londrina Solid", sans-serif;
 }
+
+.montserrat-font {
+	font-family: "Montserrat", sans-serif;
+}
+
+@font-face {
+	font-family: 'cactus';
+	src: url(./SITE-Campanha/Fontes/Cactus\ Regular.otf)
+}
+
+.cactus-font {
+	font-family: "cactus", sans-serif;
+}
+
