--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 
 #cabecalho {
     display: flex;
+    width: 100%;
+    position: fixed;
     justify-content: space-around;
     align-items: center;
     height: 50px;
@@ -39,9 +41,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
-    background: url(./assets/projeto-socialista.png);
-    background-position: center 75%;
+    height: calc(100vh + 100px);
+    background: url(./assets/projeto-socialista.png) center 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #intro button {
@@ -54,11 +57,127 @@
     border: none;
     border-radius: 10px;
     font-size: 2rem;
-    margin-top: 170px;
+    margin-top: 250px;
     transition: ease-in-out .5s;
 }
 #intro button:hover {
     transform: scale(1.1);
 }
+
+/* MANIFESTO */
+#corpo-manifesto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+}
+
+#corpo-manifesto h1 {
+    font-size: 7rem;
+    color: var(--vermelho-fonte);
+}
+
+#corpo-manifesto h2 {
+    font-size: 2.4rem;
+    font-weight: 900;
+    line-height: 1.1;
+    text-align: center;
+    color: black;
+    padding-bottom: 30px;
+}
+
+#corpo-manifesto p {
+    max-width: 900px;
+    max-height: 450px;
+    overflow-y: scroll;
+}
+
+/* CANDIDATURAS */
+#pre-candidatos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+}
+
+#pre-candidatos h1 {
+    font-size: 7rem;
+    color: var(--vermelho-fonte);
+    padding-bottom: 30px;
+}
+
+.pre-candidatos-carrossel {
+    display: flex;
+    gap: 20px;
+}
+
+.linha-vermelha-divisao {
+    display: block;
+    width: 200px;
+    border: 2px solid var(--vermelho-fonte);
+}
+
+.corpo-card {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.pre-candidatos-carrossel img {
+    width: 300px;
+}
+
+.pre-candidatos-carrossel h2 {
+    font-weight: bold;
+    font-size: 1.2rem;
+    line-height: 1.2;
+}
+    /* faça parte */
+#faca-parte {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--vermelho-bg);
+    width: 100%;
+    margin-top: 50px;
+    padding: 30px 0;
+    gap: 50px;;
+}
+
+.clique-aqui {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.clique-aqui h2 {
+    font-size: 2rem;
+    color: var(--amarelo-fonte);
+}
+
+.clique-aqui button {
+    color: white;
+    background-color: var(--verde-whatsapp);
+    font-size: 1.8rem;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 120px;
+}
+
+
+
+.vamos-trilhar p {
+    color: white;
+    font-size: 1.6rem;
+}
+
+
+
+
 
 
