> fazer o formulario funcionar, criar a agenda, tornar rolagens mais suaves e adicionar candidatos

--- a/global.css
+++ b/global.css
@@ -86,6 +86,7 @@ a {
 	--vermelho-fonte: #ea000c;
 	--amarelo-fonte: #fed300;
 	--verde-whatsapp: #33a515;
+	--azul-manifesto: #18407b;
 }
 
 /* CONTAINERS */
