feito botão responsivo. > Continuar responsividade a tarde para paginas ate 765px

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/* IMPORTS */
-@import url(./global.css);
-@import url(./responsivo.css);
 
 
 /* HEADER */
@@ -19,20 +16,58 @@
     width: 50px;
 }
 
-#menu-header {
+#nav-list {
     display: flex;
     gap: 20px;
 }
 
-#menu-header li a {
+#nav-list li a {
     color: var(--amarelo-fonte);
     text-transform: uppercase;
     font-size: 1.1rem;
     transition: ease-in-out .3s;
 }
 
-#menu-header li a:hover {
+#nav-list li a:hover {
     color: white;
+}
+
+#nav-list.active {
+    transform: translateX(0);
+}
+
+.mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+}
+.mobile-menu.active .line2 {
+    opacity: 0;
+}
+.mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+
+.mobile-menu div {
+    width: 32px;
+    height: 2px;
+    background: white;
+    margin: 8px;
+    transition: .3s;
 }
 
 /* IMAGEM DE INTRODUÇÃO */
@@ -151,6 +186,8 @@
     }
 
     .assinar-form button {
+        display: flex;
+        align-items: center;
         color: var(--vermelho-bg);
         font-weight: bold;
         font-size: 1.3rem;
@@ -158,6 +195,8 @@
         border: none;
         border-radius: 12px;
         padding: 10px 90px;
+        height: 37px;
+        width: 267px;
         cursor: pointer;
     }
 
@@ -193,6 +232,11 @@
     gap: 15px;
     padding-left: 10px;
     padding-top: 10px;
+}
+
+.pre-candidatos-carrossel {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .pre-candidatos-carrossel img {
