--- a/responsivo.css
+++ b/responsivo.css
@@ -1,3 +1,41 @@
+@media (max-width: 360px) {
+
+    #intro {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        background: url(./assets/projeto-socialista.png) center 50%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    #intro button {
+        max-width: 90vw;
+        padding: 5px 15px;
+    }
+
+    #corpo-manifesto h1 {
+        margin-top: -50px;
+        font-size: 4rem;
+    }
+
+    #pre-candidatos h1 {
+        margin-top: -50px;
+        font-size: 4rem;
+    }
+
+    .clique-aqui button {
+        max-width: 90vw;
+    }
+
+    .vamos-trilhar p {
+        max-width: 90vw;
+    }
+
+}
+
 @media (max-width: 765px) {
 
     .mobile-menu {
@@ -6,10 +44,10 @@
 
     #nav-list {
         position: absolute;
-        top: 7vh;
+        top: 6vh;
         right: 0;
-        width: 40vw;
-        height: 93vh;
+        width: 50vw;
+        height: 95vh;
         background: var(--vermelho-bg);
         flex-direction: column;
         align-items: center;
