--- a/style.css
+++ b/style.css
@@ -298,9 +298,9 @@
     font-size: 1.8rem;
     border: none;
     border-radius: 10px;
-    padding: 10px 120px;
+    padding: 10px 100px;
+    max-width: 25ch;
 }
-
 
 
 .vamos-trilhar p {
