atualizada responsividade. > Revisar e adicionar os novos elementos, 2 dias para finalizar

--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@
 
 .pre-candidatos-carrossel {
     display: flex;
+    justify-content: center;
     flex-wrap: nowrap;
     gap: 20px;
     overflow-x: auto;
