--- a/responsivo.css
+++ b/responsivo.css
@@ -20,14 +20,40 @@
         background-repeat: no-repeat;
     }
 
+    #corpo-manifesto h1 {
+        margin-top: -50px;
+        font-size: 4rem;
+    }
+
+}
+
+@media (max-width: 575px) {
+
     #intro button {
         max-width: 90vw;
         padding: 5px 15px;
+    } 
+    .titulo-intro h1 {
+        font-size: 5rem;
+    }
+
+    .titulo-intro h2 {
+        font-size: 4rem;
+        margin-top: -20px;
     }
 
     #corpo-manifesto h1 {
         margin-top: -50px;
-        font-size: 4rem;
+        font-size: 5rem;
+    }
+
+    #corpo-manifesto h2 {
+        font-size: 1.6rem;
+    }
+
+    #pre-candidatos h1 {
+        margin-top: -50px;
+        font-size: 4.5rem;
     }
 
     .clique-aqui button {
@@ -40,32 +66,6 @@
 
 }
 
-@media (max-width: 575px) {
-    .titulo-intro h1 {
-        font-size: 5.5rem;
-    }
-
-    .titulo-intro h2 {
-        font-size: 4.5rem;
-        margin-top: -20px;
-    }
-
-    #corpo-manifesto h1 {
-        margin-top: -50px;
-        font-size: 5rem;
-    }
-
-    #corpo-manifesto h2 {
-        font-size: 1.7rem;
-    }
-
-    #pre-candidatos h1 {
-        margin-top: -50px;
-        font-size: 4.5rem;
-    }
-
-}
-
 @media (max-width: 765px) {
 
     .mobile-menu {
@@ -74,14 +74,14 @@
 
     #nav-list {
         position: absolute;
-        top: 6vh;
+        top: 2vh;
         right: 0;
         width: 50vw;
-        height: 95vh;
+        height: 100vh;
         background: var(--vermelho-bg);
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-evenly;
         transform: translateX(100%);
         transition: transform .4s ease-in;
     }
@@ -92,11 +92,11 @@
     }
 
     #corpo-manifesto p {
-        max-width: 95vw;
+        max-width: 90vw;
     }
 
     .container-form {
-        max-width: 80vw;
+        max-width: 90vw;
         margin: 0 auto;
     }
 
