--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@
   margin-bottom: 10px;
 }
 
+#corpo-manifesto strong {
+  font-weight: bold;
+}
+
 .btn-quemassinou {
   display: flex;
   margin: 10px auto;
