--- a/style.css
+++ b/style.css
@@ -253,10 +253,10 @@
 }
 
 #pre-candidaturas h3 {
-    color: var(--azul-manifesto);
-    font-size: 4.5rem;
-    text-align: center;
-    max-width: 90vw;
+  color: var(--azul-manifesto);
+  font-size: 4.5rem;
+  text-align: center;
+  max-width: 90vw;
 }
 
 .candidatos-pref {
@@ -279,17 +279,18 @@
 }
 
 .card-candidato img {
-    width: 500px;
-    max-width: 90vw;
+  width: 500px;
+  max-width: 90vw;
 }
 
 .card-candidato span {
-    display: inline-block;
+  display: inline-block;
   font-weight: bold;
   font-size: 1.3rem;
   line-height: 1.1;
   margin-top: 10px;
   margin-left: 20px;
+  max-width: 19ch;
 }
 
 .card-candidato p {
@@ -299,45 +300,61 @@
   line-height: 1.2;
 }
 
+.linha-laranja {
+  display: block;
+  width: 200px;
+  border: 2px solid var(--laranja-fonte);
+  margin: 15px 15px 0px 20px;
+}
+
 .linha-vermelha {
   display: block;
   width: 200px;
   border: 2px solid var(--vermelho-fonte);
   margin: 15px 15px 0px 20px;
 }
+.linha-vermelha-luciana {
+  display: block;
+  width: 200px;
+  border: 2px solid var(--vermelho-fonte);
+  margin: 15px 15px 0px 10px;
+}
+
+.card-luciana {
+  margin-right: 30px;
+}
 
 .mandato-coletivo {
-    display: flex;
+  display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  gap: 20px;
   max-width: 90vw;
   justify-content: center;
   align-items: center;
 }
 
 .mandato-coletivo .card-candidato {
-    width: 250px;
-    max-width: 90vw;
+  width: 250px;
+  max-width: 90vw;
 }
 
-.mandato-coletivo .linha-vermelha {
-    width: 180px;
-    margin-left: 10px;
+.mandato-coletivo .linha-laranja {
+  width: 180px;
+  margin-left: 10px;
 }
 
 .mandato-coletivo img {
-    width: 240px;
-    max-width: 90vw;
+  width: 240px;
+  max-width: 90vw;
 }
 
 .mandato-coletivo span {
-    font-size: 1.1rem;
-    margin-left: 10px;
+  font-size: 1.1rem;
+  margin-left: 10px;
 }
 
 .mandato-coletivo p {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 
 /* faça parte */
