--- a/style.css
+++ b/style.css
@@ -400,3 +400,119 @@
   color: white;
   font-size: 1.6rem;
 }
+
+/* AGENDA */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+}
+
+.eventos {
+  height: 50px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: white;
+  font-size: 1.2rem;
+  background-color: var(--cinza-bg);
+  margin-bottom: 5px;
+}
+
+.eventos span {
+  padding: 50px auto;
+  margin-left: 15px;
+}
+
+.calendar {
+  width: 400px;
+  height: 300px;
+  /* margin-right: 20px; */
+}
+
+.month {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-top: 2px solid var(--vermelho-claro);
+  color: rgb(0, 0, 0);
+}
+
+.weekdays, .days {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.weekdays div, .days div {
+  width: calc(100% / 7);
+  text-align: center;
+  padding: 10px;
+}
+
+.date p {
+
+  font-weight: bold;
+}
+
+.days div {
+  cursor: pointer;
+}
+
+.days div:hover {
+  background-color: #ddd;
+}
+
+.today {
+  background-color: rgb(255, 121, 121);
+}
+
+.appointment {
+  background-color: #ddd;
+}
+
+.agenda {
+  width: 450px;
+  max-width: 95vw;
+  height: 300px;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.prox-eventos {
+  height: 50px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: white;
+  font-size: 1.2rem;
+  background-color: var(--cinza-bg);
+  margin-bottom: 5px;
+}
+
+.prox-eventos span {
+  padding: 50px auto;
+  margin-left: 15px;
+}
+
+.events {
+  margin-bottom: 10px;
+}
+
+.events div {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ddd;
+}
+
