feita a lista. Melhorar agenda e colocar no ar

--- a/global.css
+++ b/global.css
@@ -94,6 +94,7 @@ a {
 	--azul-manifesto: #18407b;
 	--laranja-fonte: #fe6100;
 	--cinza-bg: #666666;
+	--cinza-fonte: #2c2c2c;
 }
 
 /* CONTAINERS */
