--- a/style.css
+++ b/style.css
@@ -558,3 +558,60 @@ Version: 1.0
 #rodape span {
   color: white;
 }
+
+/* MODAL NANDO */
+
+.modalNando-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalNando {
+  background: white;
+  text-align: start;
+  height: 70vh;
+  width: 800px;
+  max-width: 90vw;
+  overflow-x: auto;
+  padding: 30px;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  -webkit-box-shadow: 10px 10px 22px -3px rgba(0,0,0,0.4);
+-moz-box-shadow: 10px 10px 22px -3px rgba(0,0,0,0.4);
+box-shadow: 10px 10px 22px -3px rgba(0,0,0,0.4);
+position: relative;
+}
+
+.modalNando strong {
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.modalNando-container.ativo {
+  display: flex
+  }
+
+  @keyframes modalNando {
+    from {
+      opacity: 0;
+      transform: translate3d(0, -30px, 0);
+    }
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+.ativo .modalNando {
+animation: modal .3s forwards;
+}
