--- a/style.css
+++ b/style.css
@@ -580,15 +580,13 @@ Version: 1.0
   height: 70vh;
   width: 800px;
   max-width: 90vw;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 50px 30px;
   border-radius: 10px;
   justify-content: center;
   align-items: center;
-  -webkit-box-shadow: 10px 10px 22px -3px rgba(0,0,0,0.4);
--moz-box-shadow: 10px 10px 22px -3px rgba(0,0,0,0.4);
-box-shadow: 10px 10px 22px -3px rgba(0,0,0,0.4);
-position: relative;
+  box-shadow: 10px 10px 22px -3px rgba(0,0,0,0.4);
+  position: relative;
 }
 
 .modalNando strong {
