--- a/style.css
+++ b/style.css
@@ -589,29 +589,14 @@ Version: 1.0
   position: relative;
 }
 
+.modalNando p {
+  line-height: 1.2;
+}
+
 .modalNando strong {
   font-size: 1.1rem;
   font-weight: bold;
   text-align: center;
-}
-
-.modalNando-container.ativo {
-  display: flex;
-  }
-
-  @keyframes modalNando {
-    from {
-      opacity: 0;
-      transform: translate3d(0, -30px, 0);
-    }
-    to {
-      opacity: 1;
-      transform: translate3d(0, 0, 0);
-    }
-  }
-
-.ativo .modalNando {
-animation: modalNando .3s forwards;
 }
 
 .botaoFechar {
