--- a/responsivo.css
+++ b/responsivo.css
@@ -1,4 +1,3 @@
-
 @media (max-width: 390px) {
 
     .titulo-intro h1 {
@@ -75,6 +74,7 @@
 
     .card-candidato img {
         width: 350px;
+		max-width: 90vw;
     }
 }
 
@@ -123,6 +123,11 @@
       .mandato-coletivo {
         gap: 20px;
       }
+	
+	.card-candidato{
+		width: 350px
+		max-width: 90vw;
+	}	
 
 
 }
