--- a/style.css
+++ b/style.css
@@ -188,11 +188,12 @@ Version: 1.0
 }
 
 #subscriber-list {
+  text-align: center;
   list-style: none;
   padding: 0;
   line-height: 1.2;
   color: var(--cinza-fonte);
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 /* assinatura do manifesto */
