--- a/responsivo.css
+++ b/responsivo.css
@@ -1,7 +1,7 @@
 @media (max-width: 390px) {
 
     .titulo-intro h1 {
-        font-size: 4.5rem;
+        font-size: 3rem;
     }
 
     .titulo-intro h2 {
@@ -23,14 +23,6 @@
     #corpo-manifesto h1 {
         margin-top: -50px;
         font-size: 4rem;
-    }
-
-    #pre-candidaturas h3 {
-        font-size: 3.5rem;
-    }
-
-    .card-candidato img {
-        width: 350px;
     }
 
 }
@@ -59,22 +51,6 @@
         font-size: 1.6rem;
     }
 
-    #pre-candidaturas h2 {
-        font-size: 4.5rem;
-        max-width: 90vw;
-    }
-
-    .clique-aqui button {
-        max-width: 90vw;
-    }
-
-    .vamos-trilhar p {
-        max-width: 90vw;
-    }
-
-    .card-candidato img {
-        width: 350px;
-    }
 }
 
 @media (max-width: 770px) {
@@ -115,18 +91,12 @@
         margin: 0 auto;
     }
 
-    .card-luciana {
-        margin-right: 0px;
-      }
+    .cardsCandidaturas {
+        justify-content: start;
+    }
 
-      .mandato-coletivo {
+    .QRCode {
         gap: 20px;
       }
-	
-	.card-candidato{
-		width: 350px;
-		max-width: 90vw;
-	}	
-
 
 }
