--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ Version: 1.0
   font-size: 3rem;
   margin: 0 auto;
   text-align: center;
+  max-width: 90vw;
 }
 
 .cardsCandidaturas {
@@ -560,6 +561,7 @@ Version: 1.0
   font-weight: 900;
   font-size: 3rem;
   margin-bottom: 20px;
+  max-width: 90vw;
   text-align: center;
 }
 
